<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/userDetails"/>

    <Button
        android:id="@+id/ChampionShip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/championship"/>

    <Button
        android:id="@+id/ViewF1Team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_f1_teams"/>


    <Button
        android:id="@+id/AddF1Team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_f1_team" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout" />


</LinearLayout>